--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,26 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+  font-family: 'open-sans', sans-serif !important;
+  background: black !important;
+  color: white;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+a{
+  color: #cda45e;
+  text-decoration: none !important;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+a:hover{
+  color: #d9ba85;
+  text-decoration: none !important;
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,h2,h3,h4,h5,h6{
+  font-family: 'playfair display', serif;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+body::-webkit-scrollbar{
+  display: none;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+section{
+  padding: 60px 0;
+  overflow: hidden;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.section-bg{
+  background-color: #1a1a1a;
 }
